<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.laura.quintodinorama.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <!--<fragment
        android:id="@+id/navigation_search"
        android:name="com.laura.quintodinorama.ui.fragment.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" /> -->

    <fragment
        android:id="@+id/navigation_dino"
        android:name="com.laura.quintodinorama.ui.fragment.DinosaursFragment"
        android:label="@string/title_dino"
        tools:layout="@layout/fragment_dinosaurs" />

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.laura.quintodinorama.ui.fragment.FavoriteFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.laura.quintodinorama.ui.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>